moved from root folder.

--- a/que/apps/assets/client/templates/home.html
+++ b/que/apps/assets/client/templates/home.html
@@ -4,7 +4,7 @@
         <div class="profile-info-container text-center">
             <div class="profile-pic-container" layout="row" layout-margin layout-align="center center">
                 <div class="pic-wrapper">
-                    <img src="/static/images/jide.jpg" class="img-responsive"/>
+                    <img src="/client/images/jide.jpg" class="img-responsive"/>
                 </div>
             </div>
             <div class="physician-name-qualification">
