--- a/que/templates/register.html
+++ b/que/templates/register.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Register</title>
-</head>
-<body>
+{% extends "includes/layout.html" %}
 
-</body>
-</html>
+{% block content %}
+{% from "includes/_formhelpers.html" import render_field %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <h1>Register</h1>
+            <form id="signUpForm" role="form" name="registerForm" action="register" method="POST">
+                {% for field in form %}
+                {{ render_field(field, class="form-control") }}
+                {% endfor %}
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary btn-lg">
+                        Register
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+{% endblock %}
