convert from bootstrap to angular material.

--- a/que/apps/assets/client/templates/physician/availability-settings.html
+++ b/que/apps/assets/client/templates/physician/availability-settings.html
@@ -1,8 +1,41 @@
-<md-content class="md-whiteframe-1dp" flex="100" flex-gt-xs="80" layout-margin layout-fill>
-    <md-list class="settings">
-        <md-list-item ng-repeat="setting in availabilitySettings"
-                ng-click="editSettings(ev, setting)">
-            <h4 class="day">[[ setting.day ]]</h4>
-        </md-list-item>
-    </md-list>
-</md-content>
+<div class="mdl-grid">
+    <div class="mdl-cell mdl-cell--2-col"></div>
+    <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--8-col">
+        <div class="availability-settings mdl-cell mdl-cell--12-col" id="accordion" role="tablist"
+             aria-multiselectable="true">
+            <div class="mdl-cell mdl-cell--12-col" ng-repeat="setting in availabilitySettings">
+                <div class="mdl-cell mdl-cell" role="tab" id="heading[[ setting.day ]]">
+                    <h6>
+                        <a role="button" data-toggle="collapse" data-parent="#accordion" data-target="#[[ setting.day ]]"
+                           aria-expanded="false" aria-controls="[[ setting.day ]]">
+                            [[ setting.day ]]
+                        </a>
+                    </h6>
+                </div>
+                <div id="[[ setting.day ]]" class="collapse" role="tabpanel" aria-labelledby="heading[[ setting.day ]]">
+                    <p>Select times on [[ setting.day ]] you think you'll be most available.</p>
+                    <ul class="mdl-list">
+                        <li class="mdl-list__item" ng-repeat="hour in hours">
+                            <span class="mdl-list__item-primary-content">[[ hour.title ]]</span>
+                            <span class="mdl-list__item-secondary-action">
+                                <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="[[ setting.day ]][[ hour.id ]]">
+                                    <input type="checkbox" id="[[ setting.day ]][[ hour.id ]]" class="mdl-checkbox__input"
+                                           ng-checked="exists(hour.id)" ng-click="toggle(hour.id)" />
+                                </label>
+                            </span>
+                        </li>
+                        <li class="mdl-list__item">
+                            <span class="mdl-list__item-primary-content">repeat weekly</span>
+                            <span class="mdl-list__item-secondary-action">
+                                <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="repeatWeekly[[$index]]">
+                                     <input type="checkbox" id="repeatWeekly[[$index]]" class="mdl-checkbox__input"
+                                        ng-checked="" ng-click="" />
+                                </label>
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
