settings and logout links.

--- a/que/templates/dashboard.html
+++ b/que/templates/dashboard.html
@@ -17,8 +17,12 @@
                     <i class="material-icons">more_vert</i>
                 </button>
                 <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" for="hdrbtn">
-                    <li class="mdl-menu__item">Settings</li>
-                    <li class="mdl-menu__item">Logout</li>
+                    <li class="mdl-menu__item">
+                        <a ui-sref="settings">Settings</a>
+                    </li>
+                    <li class="mdl-menu__item">
+                        <a href="/logout">Logout</a>
+                    </li>
                 </ul>
             </div>
         </header>
