--- a/que/apps/assets/client/src/sass/site.scss
+++ b/que/apps/assets/client/src/sass/site.scss
@@ -2,6 +2,7 @@
 @import 'includes/que/site/_home';
 @import 'includes/que/site/_consultations';
 @import 'includes/que/_questions';
+@import 'includes/que/_videos';
 
 
 html,
