--- a/que/apps/assets/client/templates/video.html
+++ b/que/apps/assets/client/templates/video.html
@@ -1,3 +1,53 @@
-<md-content class="md-whiteframe-1dp" flex="100" flex-gt-xs="80" layout="column" layout-fill>
-    <iframe frameborder="0" id="video" flex layout-fill></iframe>
-</md-content>
+<style>
+    html,
+    body,
+    #main,
+    #uiView {
+        height: 100%;
+        min-height: 100%;
+    }
+
+    body {
+        background-color: #000;
+        color: white;
+        padding-top: 51px;
+        padding-bottom: 0;
+    }
+</style>
+
+<div class="video-container">
+    <twilio-video id="remote-media" media="remoteParticipant" class="embed-responsive"></twilio-video>
+    <twilio-video id="local-media" media="previewMedia" class="embed-responsive"></twilio-video>
+    <div class="video-controls text-center">
+        <div class="container">
+            <div class="col-md-12">
+                <div class="pull-right">
+                    <ul>
+                        <li><a href=""></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="video-section text-center">
+        <div class="container">
+            <div class="col-md-12">
+                <div class="start-time">
+                    [[ startTime ]]
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="video-info-section text-center">
+        <div class="container">
+            <div class="col-md-12">
+                <a ng-click="call()" class="phone-btn call-btn" ng-show="!clientConnected">
+                    <i class="fa fa-phone fa-3x"></i>
+                </a>
+                <a href="#" ng-click="" class="phone-btn end-call-btn" ng-show="clientConnected">
+                    <i class="fa fa-phone fa-3x"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
