--- a/que/templates/includes/layout.html
+++ b/que/templates/includes/layout.html
@@ -10,6 +10,8 @@
     {% block css %}
     <link rel="stylesheet" type="text/css" href="{{ url_for('assets.static', filename='css/site.css') }}" />
     {% endblock %}
+
+    {% block pageCss %}{% endblock %}
 </head>
 
 <body>
