--- a/que/apps/assets/client/templates/physician/video-consults.html
+++ b/que/apps/assets/client/templates/physician/video-consults.html
@@ -5,7 +5,7 @@
                 <div class="table-responsive">
                     <table class="table table-hover">
                         <tbody>
-                        <tr ng-repeat="consult in videoConsults">
+                        <tr ng-repeat="consult in videoConsults" ui-sref="video({'videoId': consult.id})">
                             <td>[[ consult.fullname ]]</td>
                             <td>[[ consult.email ]]</td>
                             <td>[[ consult.date_chosen | date ]]</td>
