--- a/que/templates/physician.html
+++ b/que/templates/physician.html
@@ -6,7 +6,9 @@
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header pull-left">
-                <a class="navbar-brand" href="#">Que</a>
+                <a class="navbar-brand" href="#">
+                    <img src="{{ url_for('assets.static', filename='images/logo.png') }}" width="64px" />
+                </a>
             </div>
             <div class="dropdown pull-right physician-nav">
                 <a class="dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
