--- a/que/templates/dashboard.html
+++ b/que/templates/dashboard.html
@@ -18,7 +18,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Que</a>
+                <a class="navbar-brand" href="#">
+                    <img src="{{ url_for('assets.static', filename='images/logo.png') }}" width="64px"/>
+                </a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
